# PXD-GUI

./: CMakeLists.txt  README.md  main.cpp
sources/: calendar.cpp  calendar.hpp  clock.cpp  clock.hpp  csv_editor.cpp  csv_editor.hpp  file_diff.cpp  file_diff.hpp  file_explorer.cpp  file_explorer.hpp  main_window.cpp  main_window.hpp  paint.cpp  paint.hpp  plotter.cpp  plotter.hpp  text_editor.cpp  text_editor.hpp
sources/imgui/: imgui_impl_glfw.cpp
